# clip-as-service

server/: pyproject-all.toml  pyproject.toml  requirements.txt  setup.py
server/clip_server/executors/: clip_onnx.py
